# bark

./: .clang-tidy  .codespellrc  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  LICENSE  README.md  cmake-format.yaml  sonar-project.properties  vcpkg.json
.github/actions/install-clang/: action.yml
.github/actions/install-gcc/: action.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: .clang-tidy  CMakeLists.txt
benchmarks/source/: async_udp_client_benchmarks.cpp  benchmark_helpers.hpp  client_benchmarks.cpp  count_benchmarks.cpp  event_benchmarks.cpp  gauge_benchmarks.cpp  metric_benchmarks.cpp  mpmc_client_benchmarks.cpp  spsc_client_benchmarks.cpp  transports_benchmarks.cpp  udp_client_benchmarks.cpp
cmake/: dev-mode.cmake  folders.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  project-is-top-level.cmake  spell-targets.cmake  spell.cmake  variables.cmake
example/: .clang-tidy  CMakeLists.txt  empty_example.cpp  getting_started.cpp
include/bark/: asio_client.hpp  asio_io_context_wrapper.hpp  bark.hpp  client.hpp  count.hpp  datagram.hpp  event.hpp  feature_detection.hpp  gauge.hpp  histogram.hpp  i_datadog_client.hpp  mpmc_client.hpp  noop_client.hpp  number_of_io_threads.hpp  sample_rate.hpp  spsc_client.hpp  tags.hpp  udp_client.hpp
include/bark/transports/: async_udp_transport.hpp  async_uds_transport.hpp  constants.hpp  datagram_transport.hpp  udp_transport.hpp  uds_transport.hpp
include/twig/datadog/: asio_client.hpp  async_udp_client.hpp  client.hpp  compile_time_string.hpp  compile_time_string_fmt.hpp  count.hpp  count_fmt.hpp  datadog-client.hpp  datagram.hpp  event.hpp  gauge.hpp  gauge_fmt.hpp  histogram.hpp  histogram_fmt.hpp  i_datadog_client.hpp  metric.hpp  mpmc_client.hpp  noop_client.hpp  number_of_io_threads.hpp  sample_rate.hpp  spsc_client.hpp  tags.hpp  udp_client.hpp  udp_server.hpp
include/twig/datadog/detail/: fmt.hpp
source/: asio_client.cpp  async_udp_client.cpp  client.cpp  count.cpp  event.cpp  fmt.hpp  gauge.cpp  histogram.cpp  mpmc_client.cpp  serialize.hpp  spsc_client.cpp  udp_client.cpp  udp_server.cpp
source/transports/: async_transport_common.hpp  async_udp_transport.cpp  async_uds_transport.cpp  sync_transport_common.hpp  udp_transport.cpp  uds_transport.cpp
test/: .clang-tidy  CMakeLists.txt
test/source/: asio_client_tests.cpp  async_udp_client_tests.cpp  client_tests.cpp  count_tests.cpp  event_tests.cpp  gauge_tests.cpp  histogram_tests.cpp  main.cpp  mpmc_client_tests.cpp  raii_async_context.hpp  spsc_client_tests.cpp  tags_tests.cpp  udp_client_tests.cpp  udp_server.cpp  udp_tests.cpp
test/source/details/: raii_async_context.hpp  udp_server.cpp  udp_server.hpp  uds_server.cpp  uds_server.hpp
test/source/transports/: async_udp_transport_tests.cpp  async_uds_transport_tests.cpp  udp_transport_tests.cpp  uds_transport_tests.cpp
tools/: check_include_what_you_use.sh  check_install_packages_match.py
triplets/: sanitize-x64-linux.cmake  sanitize-x64-windows-static-md.cmake
